[gd_scene load_steps=10 format=3 uid="uid://dc78gwsm25jyh"]

[ext_resource type="LabelSettings" uid="uid://cnt7oar1wgf4e" path="res://assets/GM_32_Dark.tres" id="1_3or2o"]
[ext_resource type="Script" path="res://scripts/game_screen.gd" id="1_la2jb"]
[ext_resource type="Texture2D" uid="uid://wdw2cfevmnhn" path="res://assets/ui/blue_button00.png" id="2_da14x"]
[ext_resource type="PackedScene" uid="uid://bll1k28jiea1u" path="res://scenes/memory_tile.tscn" id="2_ig6ex"]
[ext_resource type="Texture2D" uid="uid://7ko2uqj5ornr" path="res://assets/ui/yellow_button00.png" id="3_bexqg"]
[ext_resource type="Texture2D" uid="uid://cpkrknpttkvov" path="res://assets/ui/green_button00.png" id="4_5b5xb"]
[ext_resource type="LabelSettings" uid="uid://1p223qwqlj85" path="res://assets/GM_32_White.tres" id="5_1hb06"]
[ext_resource type="PackedScene" uid="uid://bnaahqbpu6fbn" path="res://scenes/scorer.tscn" id="8_fw7tq"]
[ext_resource type="PackedScene" uid="uid://bvyd4tmuloxqx" path="res://scenes/game_over.tscn" id="9_d7qps"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_la2jb")
men_tile_scene = ExtResource("2_ig6ex")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MC1" type="MarginContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HB/MC1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MC2" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VB" type="VBoxContainer" parent="HB/MC2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_3or2o")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HB/MC2/VB/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_3or2o")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="HB/MC2/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_3or2o")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HB/MC2/VB/HB2"]
layout_mode = 2
text = "0 / 00"
label_settings = ExtResource("1_3or2o")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HB/MC2/VB"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC2/VB"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_da14x")
texture_pressed = ExtResource("3_bexqg")
texture_hover = ExtResource("4_5b5xb")

[node name="Label" type="Label" parent="HB/MC2/VB/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_1hb06")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_fw7tq")]

[node name="GameOver" parent="." instance=ExtResource("9_d7qps")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HB/MC2/VB/ExitButton" to="." method="_on_exit_button_pressed"]
